--- a/.classpath
+++ b/.classpath
@@ -2,21 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cldr"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-charset"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-charset-tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-collate"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-collate-tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-core"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-test-framework"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-core-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit-tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-currdata"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-langdata"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-regiondata"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cldr"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-charset-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-collate-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-packaging-tests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-test-framework"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-tools"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit-tests"/>
+	<classpathentry kind="output" path="classes"/>
 </classpath>
