--- a/.classpath
+++ b/.classpath
@@ -2,19 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cldr"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-charset"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-charset-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-collate"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-collate-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-core"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-core-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-currdata"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-langdata"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-regiondata"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-test-framework"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-tools"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/icu4j-translit-tests"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/icu4j.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/utilities.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cldr-tools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/UnicodeJsps"/>
+	<classpathentry kind="lib" path="/Applications/eclipse-indigo/plugins/org.apache.ant_1.8.2.v20120109-1030/lib/ant-junit4.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
