--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/cldr-tools/libs/icu4j.jar" sourcepath="/cldr-tools/libs/icu4j-src.jar"/>
-	<classpathentry kind="lib" path="/cldr-tools/libs/utilities.jar" sourcepath="/cldr-tools/libs/utilities-src.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cldr-tools"/>
-	<classpathentry kind="lib" path="C:/ant/1.8.3/lib/ant-junit4.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/icu4j-src.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/icu4j.jar" sourcepath="/cldr-tools/libs/icu4j-src.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/utilities-src.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/utilities.jar" sourcepath="/cldr-tools/libs/utilities-src.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/xercesImpl.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
