git-svn-id: https://unicode.org/repos/unicodetools/trunk@664 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/.project
+++ b/unicodetools/.project
@@ -3,6 +3,8 @@
 	<name>unicodetools</name>
 	<comment></comment>
 	<projects>
+		<project>cldr-tools</project>
+		<project>cldr-unittest</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
