--- a/unicodetools/.classpath
+++ b/unicodetools/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-tools"/>
 	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/xercesImpl.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/guava-16.0.1.jar" sourcepath="/cldr-tools/libs/guava-16.0.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/icu4j.jar" sourcepath="/cldr-tools/libs/icu4j-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/utilities.jar" sourcepath="/cldr-tools/libs/utilities-src.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-unittest"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/guava-18.0.jar" sourcepath="/cldr-tools/libs/guava-18.0-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
