--- a/UnicodeJspsTest/.classpath
+++ b/UnicodeJspsTest/.classpath
@@ -7,9 +7,8 @@
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/utilities-src.jar"/>
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/utilities.jar"/>
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/guava-16.0.1-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/guava-16.0.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/UnicodeJsps"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cldr-tools"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/guava-18.0.jar" sourcepath="/cldr-tools/libs/guava-18.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
