--- a/UnicodeJspsTest/.classpath
+++ b/UnicodeJspsTest/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/icu4j-src.jar"/>
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/icu4j.jar" sourcepath="/UnicodeJsps/WebContent/WEB-INF/lib/icu4j-src.jar"/>
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/utilities-src.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/utilities.jar"/>
+	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/utilities.jar" sourcepath="/UnicodeJsps/WebContent/WEB-INF/lib/utilities-src.jar"/>
 	<classpathentry kind="lib" path="/Users/markdavis/workspace/cldr/tools/java/libs/xercesImpl.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/UnicodeJsps"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cldr-tools"/>
