--- a/UnicodeJsps/.classpath
+++ b/UnicodeJsps/.classpath
@@ -8,26 +8,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/ecj-4.4.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/tomcat7-websocket.jar"/>
-	<classpathentry kind="lib" path="/Users/markdavis/Applications/apache-tomcat-7.0.27/lib/websocket-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/_Applications_apache-tomcat-7.0.62"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
