--- a/UnicodeJsps/.classpath
+++ b/UnicodeJsps/.classpath
@@ -9,5 +9,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/_Applications_apache-tomcat-7.0.62"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cldr.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/icu4j.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/utilities.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xercesImpl.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
