tweak the charts as per ESC discussions
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1252 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/.classpath
+++ b/unicodetools/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-unittest"/>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="lib" path="/cldr-tools/libs/guava-sources.jar"/>
-	<classpathentry kind="lib" path="/cldr-tools/libs/guava.jar"/>
+	<classpathentry kind="lib" path="/cldr-tools/libs/guava.jar" sourcepath="/cldr-tools/libs/guava-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
