--- a/UnicodeJsps/.classpath
+++ b/UnicodeJsps/.classpath
@@ -8,11 +8,12 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/icu4j.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/utilities.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xercesImpl.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ANT_LIB"/>
+	<classpathentry kind="lib" path="/Users/markdavis/Documents/apache-tomcat-8.0.43/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
