Updated to ICU 60.2 and adjusted flags for new compiler.
git-svn-id: https://unicode.org/repos/unicodetools/trunk@1423 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/c/char-check/Makefile
+++ b/c/char-check/Makefile
@@ -1,5 +1,9 @@
-#ICUBLD=$(HOME)/icu-inst
+#
+# This next line is for real:
 ICUBLD=/usr/local/icu
+# The next line is for test build:
+# ICUBLD=/usr/local/icu-next
+
 ICUINC=$(ICUBLD)/include
 ICULIB=$(ICUBLD)/lib
 ICULIBS=-L$(ICULIB) -licuuc -licui18n -licuio -licudata -Wl,-rpath -Wl,$(ICULIB)
