CLDR-14145 fix bidic data
- copy ucd data
- add a BIDIREFHOME directory to the JSP for changing the working directory
of bidiref1 before it is called

Should have no impact outside of Docker.
Jetty doesn't explode the *.war file the same way that Tomcat does, so the raw ucd files weren't quite as accessible without explicitly copying them.

--- a/UnicodeJsps/Dockerfile
+++ b/UnicodeJsps/Dockerfile
@@ -29,6 +29,10 @@ ADD ./jetty.d/ROOT /var/lib/jetty/webapps/ROOT/
 ENTRYPOINT [ "/port-entrypoint.sh" ]
 # copy the .war
 COPY --from=build /home/UnicodeJsps.war /var/lib/jetty/webapps/
+# copy the UCD for bidiref1
+COPY --from=build /home/src/org/unicode/jsp/bidiref1/ucd/ /usr/local/share/ucd/
+# this is the parent to 'ucd'
+ENV BIDIREFHOME /usr/local/share
 # copy the bidiref1 bin
 ENV BIDIREF1 /usr/local/bin/bidiref1
 COPY --from=cbuild /build/source/bidiref1 /usr/local/bin/
