--- a/UnicodeJsps/Dockerfile
+++ b/UnicodeJsps/Dockerfile
@@ -1,7 +1,13 @@
 # Copyright (c) 2020 and later Unicode, Inc. and others. All Rights Reserved.
-# Use -eJDKVERSION=13 -eTOMCATVERSION=8 for example to change these
-ARG JDKVERSION=16
-FROM openjdk:${JDKVERSION}-alpine AS build
+FROM alpine as cbuild
+ARG CVERSION=13.0.0
+ARG CPATH=https://www.unicode.org/Public/PROGRAMS/BidiReferenceC/
+WORKDIR /build
+RUN apk add --update -q wget make gcc musl-dev
+RUN wget -np -nv --reject-regex='.*\.(lib|exe)$' --cut-dirs=4 -nH -r ${CPATH}${CVERSION}/
+RUN cd source && gcc -I ../include/ -static -Os -o3 -o bidiref1 bidiref1.c brutils.c brtest.c brtable.c brrule.c
+RUN ls -lh /build/source/bidiref1 && (/build/source/bidiref1 || true)
+FROM openjdk:16-alpine AS build
 # Need ant, add it. Yes, this pulls in JDK8, but it's an easier
 # way to manage this.
 RUN apk add --update apache-ant
@@ -21,6 +27,14 @@ FROM jetty:9-jre11-slim AS run
 ADD port-entrypoint.sh /port-entrypoint.sh
 ADD ./jetty.d/ROOT /var/lib/jetty/webapps/ROOT/
 ENTRYPOINT [ "/port-entrypoint.sh" ]
+# copy the .war
 COPY --from=build /home/UnicodeJsps.war /var/lib/jetty/webapps/
+# copy the UCD for bidiref1
+COPY --from=build /home/src/org/unicode/jsp/bidiref1/ucd/ /usr/local/share/ucd/
+# this is the parent to 'ucd'
+ENV BIDIREFHOME /usr/local/share
+# copy the bidiref1 bin
+ENV BIDIREF1 /usr/local/bin/bidiref1
+COPY --from=cbuild /build/source/bidiref1 /usr/local/bin/
 # This is the default PORT. Override by setting PORT.
 EXPOSE 8080
