Update classpath, add regex-with-strings test class

--- a/unicodetools/.classpath
+++ b/unicodetools/.classpath
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-tools"/>
-	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/xercesImpl.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/icu4j.jar" sourcepath="/cldr-tools/libs/icu4j-src.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cldr-tools/libs/utilities.jar" sourcepath="/cldr-tools/libs/utilities-src.jar"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-unittest"/>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="/cldr-tools/libs/guava-sources.jar"/>
-	<classpathentry kind="lib" path="/cldr-tools/libs/guava.jar" sourcepath="/cldr-tools/libs/guava-sources.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cldr-code"/>
+	<classpathentry kind="lib" path="/cldr-all/cldr-code/target/test-classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
