--- a/UnicodeJspsTest/.classpath
+++ b/UnicodeJspsTest/.classpath
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/UnicodeJsps"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cldr-tools"/>
 	<classpathentry kind="lib" path="/UnicodeJsps/WebContent/WEB-INF/lib/cldr.jar"/>
 	<classpathentry kind="lib" path="/UnicodeJsps/WebContent/WEB-INF/lib/guava-sources.jar"/>
 	<classpathentry kind="lib" path="/UnicodeJsps/WebContent/WEB-INF/lib/guava.jar"/>
