--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -10,5 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: cd UnicodeJsps && docker build .
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Build with Maven
+      run: >
+        mvn -s .github/workflows/mvn-settings.xml -B compile install package --file UnicodeJsps/pom.xml
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload UnicodeJsps.war
+      uses: actions/upload-artifact@v2
+      with:
+        name: UnicodeJsps
+        path: UnicodeJsps/target/UnicodeJsps.war
+    - name: build docker image
+      run: cd UnicodeJsps && docker build .
 
