--- a/unicodetools/.classpath
+++ b/unicodetools/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cldr-code"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cldr-code"/>
 	<classpathentry kind="lib" path="/cldr-all/cldr-code/target/test-classes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
