Mavenize: More test fixes
- disable more tests that did not work previously
- fix compile issues
- use JDK11 to avoid build issue

> unicodetools/unicodetools/src/test/java/org/unicode/propstest/RegexWordBreak.java:[133,44] incompatible types: inference variable T has incompatible equality constraints java.lang.Enum,capture#1 of ? extends java.lang.Enum

- improve how CLDR dir is checked out
- mkdir Generated/BIN etc when needed
- try to generate unicode data on CI
- create output dir first
- fix Generated path

Documentation:

- bump CLDR/ICU deps into top level
- update docs on how to use maven
- add docs on updating CLDR/ICU versions
- update workflows to use top level maven file
- update docs on setup/updating
- pom versions to 1.0.0

Fixes: https://github.com/unicode-org/unicodetools/issues/64
X-PR-URL: https://github.com/unicode-org/unicodetools/pull/91

--- a/.github/workflows/push-jsp-on-tag.yml
+++ b/.github/workflows/push-jsp-on-tag.yml
@@ -21,7 +21,7 @@ jobs:
           ${{ runner.os }}-maven-
     - name: Build with Maven
       run: >
-        mvn -s .github/workflows/mvn-settings.xml -B compile install package --file UnicodeJsps/pom.xml
+        mvn -s .github/workflows/mvn-settings.xml -B compile install package -pl UnicodeJsps
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload UnicodeJsps.war
