--- a/unicodetools/pom.xml
+++ b/unicodetools/pom.xml
@@ -9,7 +9,14 @@
 	<groupId>org.unicode.unicodetools</groupId>
 	<name>Unicode Tools</name>
 
-	<version>0.0.1</version>
+	<version>1.0.0</version>
+
+	<parent>
+		<groupId>org.unicode.unicodetools</groupId>
+		<artifactId>unicodetools-parent</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
 
 	<url>https://unicode.org/cldr</url>
 
@@ -18,17 +25,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-				<!-- <mainClass>org.unicode.cldr.tool.Main</mainClass> -->
-		<!--
-				For ICU versions, see https://github.com/orgs/unicode-org/packages?repo_name=icu
-				Note that we can't use the general ICU maven packages, because utilities isn't exported (yet).
-			-->
-		<icu.version>70.0.1-SNAPSHOT-cldr-2021-06-15</icu.version>
-
-		<!--
-				For CLDR versions, see https://github.com/orgs/unicode-org/packages?repo_name=cldr
-			-->
-		<cldr.version>0.0.0-SNAPSHOT-e547a7fb5e</cldr.version>
+		<!-- <mainClass>org.unicode.cldr.tool.Main</mainClass> -->
 		<junit-version>5.7.2</junit-version>
 		<!-- Need to use an updated surefire plugin here. -->
 		<maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
@@ -48,23 +45,20 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j-for-cldr</artifactId>
-			<version>${icu.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>utilities-for-cldr</artifactId>
-			<version>${icu.version}</version>
 		</dependency>
 		<dependency>
-				<groupId>org.unicode.cldr</groupId>
-				<artifactId>cldr-code</artifactId>
-				<version>${cldr.version}</version>
+			<groupId>org.unicode.cldr</groupId>
+			<artifactId>cldr-code</artifactId>
 		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 			<version>${junit-version}</version>
 		</dependency>
@@ -108,8 +102,10 @@
 							<CLDR_ENVIRONMENT>UNITTEST</CLDR_ENVIRONMENT>
 							<java.awt.headless>true</java.awt.headless>
 							<UNICODETOOLS_REPO_DIR>${project.basedir}/..</UNICODETOOLS_REPO_DIR>
+							<!-- sibling of unicodetools-->
+							<UNICODETOOLS_OUTPUT_DIR>${project.basedir}/../output</UNICODETOOLS_OUTPUT_DIR>
 						</systemPropertyVariables>
-						<argLine>-Xmx6g -enableassertions</argLine>
+						<argLine>-Xmx10g -enableassertions</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
