--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -12,10 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Check out CLDR
+      uses: actions/checkout@v2
+      with:
+        repository: unicode-org/cldr
+        path: cldr
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 11
     - name: Cache local Maven repository
       uses: actions/cache@v2
       with:
@@ -26,6 +31,26 @@ jobs:
     - name: Build all with Maven
       run: >
         mvn -s .github/workflows/mvn-settings.xml -B compile
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # TODO: move this DOWN after JSPs once it works
+    - name: Generate Unicode data
+      # TODO: hard coded version
+      # TODO: symlink of security here?
+      run: >
+        mkdir -pv $(pwd)/output/Generated/ &&
+        ln -s $(pwd)/unicodetools/data/security ./output/Generated/ &&
+        mvn -s .github/workflows/mvn-settings.xml -B exec:java
+        -Dexec.mainClass="org.unicode.text.UCD.Main" -Dexec.args="version 14.0.0 build MakeUnicodeFiles"
+        -pl unicodetools -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr
+        -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=14.0.0
+        -DUNICODETOOLS_OUTPUT_DIR=$(pwd)/output
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Run unicodetools tests
+      run: >
+        mvn -s .github/workflows/mvn-settings.xml -B test -pl unicodetools
+        -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr -T 1C -Dparallel=classes -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=14.0.0 -DUNICODETOOLS_OUTPUT_DIR=$(pwd)/output
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Package JSPs
