--- a/UnicodeJsps/pom.xml
+++ b/UnicodeJsps/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>UnicodeJsps</artifactId>
@@ -15,23 +14,11 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<url>https://unicode.org/</url>
-
-	<scm>
-		<connection>scm:git:https://github.com/unicode-org/unicodetools.git</connection>
-	</scm>
-
 	<properties>
-
 		<servlet.version>3.1.0</servlet.version>
 		<jsp.version>2.3.3</jsp.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<jetty.version>9.4.36.v20210114</jetty.version>
 	</properties>
-
 
 	<dependencies>
 		<!-- icu -->
@@ -153,17 +140,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>githubicu</id>
-			<name>GitHub unicode-org/icu Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/unicode-org/icu</url>
-		</repository>
-		<repository>
-			<id>githubcldr</id>
-			<name>GitHub unicode-org/cldr Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/unicode-org/cldr</url>
-		</repository>
-	</repositories>
 </project>
