adjust workflows to build all branches, not just 'master'/'main'
Fixes #58
(note that #91 already corrects the Java part of this)

--- a/.github/workflows/build-charcheck.yml
+++ b/.github/workflows/build-charcheck.yml
@@ -2,9 +2,9 @@ name: Build charcheck
 
 on:
     push:
-      branches: [ master ]
+      branches: [ '*' ]
     pull_request:
-      branches: [ master ]
+      branches: [ '*' ]
 
 # strategy:
 #   matrix:
