make UnicodeJsps depend on unicodetools
For #131

--- a/UnicodeJsps/pom.xml
+++ b/UnicodeJsps/pom.xml
@@ -21,6 +21,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- JSP depends on unicodetools -->
+		<dependency>
+			<groupId>org.unicode.unicodetools</groupId>
+			<artifactId>unicodetools</artifactId>
+		</dependency>
+
 		<!-- icu -->
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
