--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -30,7 +30,7 @@ jobs:
           ${{ runner.os }}-maven-
     - name: Build all with Maven
       run: >
-        mvn -s .github/workflows/mvn-settings.xml -B compile
+        mvn -s .github/workflows/mvn-settings.xml -B compile install -DskipTests=true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     # TODO: move this DOWN after JSPs once it works
