--- a/.github/workflows/push-jsp-on-tag.yml
+++ b/.github/workflows/push-jsp-on-tag.yml
@@ -19,9 +19,14 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Build with Maven
+    - name: Compile with Maven
+      run: >  # skip unicodetools tests here
+        mvn -s .github/workflows/mvn-settings.xml -B compile install -DskipTests=true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Package with Maven
       run: >
-        mvn -s .github/workflows/mvn-settings.xml -B compile install package -pl UnicodeJsps
+        mvn -s .github/workflows/mvn-settings.xml -B compile test install package -pl UnicodeJsps
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload UnicodeJsps.war
