--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>org.unicode.unicodetools</groupId>
+				<artifactId>unicodetools</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
 			<!-- icu -->
 			<dependency>
 				<groupId>com.ibm.icu</groupId>
