--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -78,11 +78,19 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Change directory to Unicode Tools dir
-        run: cd unicodetools/mine/src
       - name: Set up out-of-source output dir
         run: |
           mkdir -p unicodetools/mine/output/Generated/BIN
+      - name: Change directory to Unicode Tools dir
+        run: cd unicodetools/mine/src
+      - name: Debug step Initialize Maven settings...
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+          echo "ls .github/workflows"
+          ls .github/workflows
       - name: Initialize Maven settings for all Maven commands
         run: mvn -s .github/workflows/mvn-settings.xml -B compile install -DskipTests=true
         env:
