--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -57,6 +57,13 @@ jobs:
     name: Out-of-source Instructions
     runs-on: ubuntu-latest
     steps:
+      - name: Debug pwd
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue-on-error: true
       - name: Checkout Unicode Tools
         uses: actions/checkout@v2
         with:
@@ -67,6 +74,13 @@ jobs:
         with:
           repository: unicode-org/cldr
           path: cldr/mine/src
+      - name: Debug pwd
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue-on-error: true
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -81,9 +95,16 @@ jobs:
       - name: Set up out-of-source output dir
         run: |
           mkdir -p unicodetools/mine/output/Generated/BIN
+      - name: Debug pwd
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue-on-error: true
       - name: Change directory to Unicode Tools dir
         run: cd unicodetools/mine/src
-      - name: Debug step Initialize Maven settings...
+      - name: Debug pwd
         run: |
           echo "pwd"
           pwd
